--- a/stockby/package.json
+++ b/stockby/package.json
@@ -16,6 +16,7 @@
     "@next/font": "13.0.7",
     "argon2": "^0.30.2",
     "axios": "^1.2.1",
+    "cookies-next": "^2.1.1",
     "dotenv": "^16.0.3",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
