--- a/stockby/package.json
+++ b/stockby/package.json
@@ -21,6 +21,8 @@
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
     "framer-motion": "^8.0.1",
+    "highcharts": "^10.3.2",
+    "highcharts-react-official": "^3.1.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.1",
     "next": "13.0.7",
